# Sench

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  vercel.json
.claude/: settings.json
.claude/skills/: sench.md
.claude/skills/sench/: SKILL.md
.claude/skills/sench/references/: analysis-modules.md  api-gouv.md  collection.md  report-template.md
examples/: 1point6_team.md  expense_management_landscape.md  luxury_resale_valuechain.md  ornikar_analysis.md  regulatory_reporting_opportunity_map.md
landing/: index.html
landing-page/: README.md  index.html  robots.txt  sench-competitive-landscape.html  sench-market.html  sench-startup.html  sench-team.html  sench-valuechain.html  sitemap.xml
sench/: __init__.py  __main__.py  cli.py
sench/core/: __init__.py  scraper.py
sench/modules/: __init__.py  base.py
sench/prompts/: __init__.py
sench/prompts/templates/: competitors.md  finance.md  founders.md  funding.md  gtm.md  icp.md  identity.md  legal.md  market_value_prop.md  marketing.md  news.md  product_breakdown.md
sench/tools/: __init__.py  page_scraper.py  screenshot.py  social_scraper.py
skills/sench-competitive-landscape/: README.md  SKILL.md
skills/sench-market/: README.md  SKILL.md
skills/sench-startup/: README.md  SKILL.md
skills/sench-team/: README.md  SKILL.md
skills/sench-valuechain/: README.md  SKILL.md
tests/: __init__.py
