[project]
name = "sench"
version = "1.0.0"
description = "Competitive intelligence sub-agent for Claude Code, Codex & Cursor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sench Team", email = "hello@sench.ai" }]
keywords = ["competitive-intelligence", "ai", "claude-code", "codex", "cursor", "sub-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://sench.ai"
Repository = "https://github.com/sench-ai/sench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sench"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["sench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
